# plant-manager-X

./: README.md  docker-compose.yml
backend/: .gitignore  pyproject.toml
backend/.docker/: Dockerfile
backend/apps/attendance/: admin.py  common.py  serializers.py  urls.py
backend/apps/bug_note/: admin.py  apps.py  common.py  serializers.py  urls.py
backend/apps/mail/: admin.py  common.py  serializer.py  urls.py
backend/apps/master_data/: apps.py
backend/apps/material/: admin.py  apps.py  common.py  serializers.py  urls.py
backend/apps/prod_flow/: admin.py  apps.py  common.py  serializer.py  urls.py  views.py
backend/apps/staff_hub/: admin.py  apps.py  models.py  permission.py  permission_check.py  serializers.py  views.py
backend/apps/trade_flow/: admin.py  apps.py  common.py  serializers.py  urls.py
backend/apps/utility/: apps.py  const.py  enums.py  models.py
backend/scripts/: sheeder.sh
backend/server/: settings.py  settings_test.py  urls.py
backend/tests/api/: test_attendance_record_all_list.py  test_attendance_record_all_list_get.py  test_attendance_record_all_list_view.py  test_attendance_record_create.py  test_attendance_record_create_view.py  test_attendance_record_my_list.py  test_attendance_record_my_list_get.py  test_attendance_record_my_list_view.py  test_attendance_record_post.py  test_attendance_record_put.py  test_attendance_record_update.py  test_attendance_record_update_view.py  test_auth_all_user_get.py  test_custom_user_me.py  test_customer_list_get.py  test_defect_create_view.py  (+49 more)
backend/trade_flow/: apps.py
(+318 files in other folders)
