[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "takushi sato"}
]
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-debug-toolbar (>=5.1.0,<6.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "django-filter (>=25.1,<26.0)",
    "djoser (>=2.3.1,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.10.0"
factory-boy = "^3.3.3"

[tool.poetry]
package-mode = false